# time-tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  package.yaml  stack.yaml  time-tracker.cabal
app/: Main.hs
docs/: project.org
res/: config.yaml
src/: Backend.hs  Config.hs  Console.hs  Tracker.hs
src/Backend/: Factory.hs
src/Backend/Impl/: Archive.hs  JIRA.hs
src/Console/: ArgParser.hs  Args.hs  Config.hs  Console.hs  Format.hs  Run.hs
src/Shared/: Client.hs  Types.hs  Utils.hs
src/Tracker/: Handlers.hs  State.hs  Types.hs
