name:                time-tracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/time-tracker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Backend
                       Console.Args
                       Console.Config
                       Console.Run
                       Shared.Client
                       Shared.Types
                       Shared.Utils
                       Tracker.State
                       Tracker.Types
                       Paths_time_tracker
  exposed-modules:     Console
                       Tracker
                       Backend.Impl.JIRA
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , basic-prelude
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , exceptions
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , mtl
                     , optparse-applicative
                     , safe
                     , string-conv
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010

executable track
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , basic-prelude
                     , bytestring
                     , exceptions
                     , lens
                     , lens-aeson
                     , managed
                     , mtl
                     , string-conv
                     , time-tracker
                     , yaml
  default-language:    Haskell2010

test-suite time-tracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/time-tracker
