name:                time-tracker
version:             0.2.2
homepage:            https://github.com/bartfrenk/time-tracker
license:             BSD3
license-file:        LICENSE
author:              Bart Frenk
maintainer:          bart.frenk@gmail.com
copyright:           2017 Bart Frenk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Backend
                       Console.Args
                       Console.Config
                       Console.Run
                       Console.Format
                       Shared.Client
                       Shared.Types
                       Tracker.State
                       Tracker.Types
                       Paths_time_tracker
  exposed-modules:     Console
                       Tracker
                       Backend.Impl.JIRA
                       Shared.Utils
  build-depends:       aeson
                     , ansi-wl-pprint
                     , attoparsec
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , mtl
                     , optparse-applicative
                     , parsec
                     , safe
                     , string-conv
                     , text
                     , time
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010

executable track
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , basic-prelude
                     , bytestring
                     , directory
                     , exceptions
                     , lens
                     , lens-aeson
                     , managed
                     , mtl
                     , string-conv
                     , time-tracker
                     , yaml
  default-language:    Haskell2010

test-suite time-tracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/time-tracker
